fixed z-index bug for footer

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -4,7 +4,7 @@
 footer {
 	background: $black;
 	position: relative;
-	z-index: 2;
+	z-index: 4;
 	padding-bottom: 60px;
 
 	@media (min-width: $screenLG) {
